@@ -10,7 +10,6 @@ import net.minecraft.client.option.GraphicsMode;
 import java.io.FileReader;
 import java.io.IOException;
 import java.lang.reflect.Modifier;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -21,10 +20,6 @@ public class SodiumGameOptions {
 
     private Path configPath;
 
-    public void notifyListeners() {
-        SodiumClientMod.onConfigChanged(this);
-    }
-
     public static class AdvancedSettings {
         public boolean animateOnlyVisibleTextures = true;
         public boolean useEntityCulling = true;
@@ -32,6 +27,7 @@ public class SodiumGameOptions {
         public boolean useFogOcclusion = true;
         public boolean useBlockFaceCulling = true;
         public boolean allowDirectMemoryAccess = true;
+        public boolean enableMemoryTracing = false;
     }
 
     public static class QualitySettings {
@@ -106,7 +102,6 @@ public class SodiumGameOptions {
             throw new IOException("Not a directory: " + dir);
         }
 
-        Files.write(this.configPath, GSON.toJson(this)
-                .getBytes(StandardCharsets.UTF_8));
+        Files.writeString(this.configPath, GSON.toJson(this));
     }
 }
